--- a/src/app/HesaplarKasaEkle/hesaplar_kasa_ekle.component.html
+++ b/src/app/HesaplarKasaEkle/hesaplar_kasa_ekle.component.html
@@ -4,14 +4,14 @@
     <div class="row">
       <!-- Page Header -->
       <div class="page-head-title">
-        <h2>Yeni Banka</h2>
+        <h2>Yeni Kasa</h2>
       </div>
       <!-- Page Header -->
       <!-- Breadcumb -->
       <ol class="breadcrumb breadcumb-title">
         <li><a href="#">Anasayfa</a></li>
         <li><a href="#">Hesaplar</a></li>
-        <li><a href="#">Banka</a></li>
+        <li><a href="#">Kasa</a></li>
         <li class="active">Yeni</li>
       </ol>
       <!-- Breadcumb -->
@@ -33,7 +33,7 @@
           <div class="panel-heading">
           <!-- Panel Left Block -->
             <div class="panel-heading-left-block">
-              <span> Yeni Banka </span>
+              <span> Yeni Kasa </span>
             </div>
           <!-- Panel Heading Left Block -->
           </div>
@@ -48,33 +48,6 @@
           </div>
           <!-- Hesap İsmi -->
 
-          <!-- Banka İsmi -->
-          <div class="form-group">
-            <label for="BankaIsmi" class="control-label form-style-ozel-label">Banka İsmi</label>
-            <input type="text" class="form-control form-style-ozel" id="BankaIsmi" placeholder="Banka İsmi">
-          </div>
-          <!-- Banka İsmi -->
-
-          <!-- Banka Şube -->
-          <div class="form-group">
-            <label for="BankaSube" class="control-label form-style-ozel-label">Banka Şubesi</label>
-            <input type="text" class="form-control form-style-ozel" id="BankaSube" placeholder="Banka Şubesi">
-          </div>
-          <!-- Banka Şube -->
-
-          <!-- Hesap Numarası -->
-          <div class="form-group">
-            <label for="BankaHesapNumarasi" class="control-label form-style-ozel-label">Hesap Numarası</label>
-            <input type="text" class="form-control form-style-ozel" id="BankaHesapNumarasi" placeholder="Hesap Numarası">
-          </div>
-          <!-- Banka Numarasi -->
-
-          <!-- Hesap Numarası -->
-          <div class="form-group">
-            <label for="BankaIbanNumarasi" class="control-label form-style-ozel-label">IBAN Numarası</label>
-            <input type="text" class="form-control form-style-ozel" id="BankaIbanNumarasi" placeholder="IBAN Numarası">
-          </div>
-          <!-- Banka Numarasi -->
 
           <!-- Şube -->
           <div class="form-group" >
