--- a/src/app/HesapDetay/hesap_detay.component.html
+++ b/src/app/HesapDetay/hesap_detay.component.html
@@ -166,7 +166,7 @@
               <div class="btn-group btn-block" dropdown>
                 <button class="btn btn-default-ozel btn-block" dropdownToggle> HESAP İŞLEMLERİ <span class="caret"></span></button>
                 <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
-                  <li role="menuitem"><a href="#" class="dropdown-item"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
+                  <li role="menuitem"><a routerLink="../duzenle" class="dropdown-item"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
                   <li role="menuitem"><a href="#" class="dropdown-item"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
                 </ul>
               </div>
