--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -6,10 +6,11 @@
       <li class="active"><a routerLink="/musteriler"><i class="fa fa-address-book"></i><span>Müşteriler</span></a></li>
       <li><a routerLink="/calisanlar"><i class="fa fa-user"></i><span>Çalışanlar</span></a></li>
       <li ><a routerLink="/giderler/listele"><i class="fa fa-address-book"></i><span>Giderler</span></a></li>
+      <li ><a routerLink="/hesaplar"><i class="fa fa-bank"></i><span>Kasa & Bankalar</span></a></li>
+      <li ><a routerLink="/raporlar"><i class="fa fa-pie-chart"></i><span>Raporlar</span></a></li>
       <li ><a routerLink="/subeler"><i class="fa fa-building-o"></i><span>Şubeler</span></a></li>
       <li ><a routerLink="/kategoriler"><i class="fa fa-tags"></i><span>Kategoriler</span></a></li>
       <li ><a routerLink="/hizmetler"><i class="fa fa-support"></i><span>Ekstralar & Hizmetler</span></a></li>
-      <li ><a routerLink="/hesaplar"><i class="fa fa-bank"></i><span>Kasa & Bankalar</span></a></li>
 
     </ul>
   </div>
