--- a/src/app/musteriler/musteriler.component.html
+++ b/src/app/musteriler/musteriler.component.html
@@ -21,8 +21,17 @@
 
 
 <div class="container-fluid m-l-230 m-t-15">
-  <!-- Müşteri Listele Table -->
+
+<!-- Müşteri Ekle -->
   <div class="row">
+    <div class="col-md-12">
+      <a routerLink="/musteriler/yeni" class="btn btn-success-ozel pull-right"><i class="fa fa-plus"></i> YENİ MÜŞTERİ</a>
+    </div>
+  </div>
+<!-- Müşteri Ekle -->
+
+  <!-- Müşteri Listele Table -->
+  <div class="row m-t-15">
     <div class="col-xs-12">
       <!-- Panel -->
       <div class="panel panel-light" style="border-radius: 5px">
