--- a/src/app/GiderDuzenle/gider_duzenle.component.html
+++ b/src/app/GiderDuzenle/gider_duzenle.component.html
@@ -4,14 +4,15 @@
     <div class="row">
       <!-- Page Header -->
       <div class="page-head-title">
-        <h2>Yeni Şube</h2>
+        <h2>Gider Düzenle</h2>
       </div>
       <!-- Page Header -->
       <!-- Breadcumb -->
       <ol class="breadcrumb breadcumb-title">
         <li><a href="#">Anasayfa</a></li>
-        <li><a href="#">Şubeler</a></li>
-        <li class="active">Yeni</li>
+        <li><a href="#">Giderler</a></li>
+        <li><a href="#">5</a></li>
+        <li class="active">Düzenle</li>
       </ol>
       <!-- Breadcumb -->
     </div>
@@ -35,7 +36,7 @@
           <div class="panel-heading">
           <!-- Panel Left Block -->
             <div class="panel-heading-left-block">
-              <span> Yeni Şube </span>
+              <span> Gider Düzenle </span>
             </div>
           <!-- Panel Heading Left Block -->
           </div>
