--- a/src/app/Giderler/gider-listele.component.html
+++ b/src/app/Giderler/gider-listele.component.html
@@ -22,7 +22,19 @@
 
 <div class="container-fluid m-l-230 m-t-15">
 
+
+  <!-- Fiş/Fatura Ekle -->
   <div class="row">
+    <div class="col-md-12">
+      <div class="btn-group pull-right" role="group" aria-label="...">
+        <a routerLink="/hesaplar/banka/yeni" class="btn btn-success-ozel"> HIZLI FİŞ/FATURA</a>
+        <a routerLink="/hesaplar/kasa/yeni" class="btn btn-success-ozel"> DETAYLI FİŞ/FATURA</a>
+      </div>
+    </div>
+  </div>
+  <!-- Fiş/Fatura Ekle -->
+
+  <div class="row m-t-15">
     <div class="col-md-12">
       <!-- Panel -->
       <div class="panel panel-light" style="border-radius: 5px">
