--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -5,7 +5,7 @@
       <li><a routerLink="/araclar"><i class="fa fa-car"></i><span>Araçlar</span></a></li>
       <li class="active"><a routerLink="/musteriler"><i class="fa fa-address-book"></i><span>Müşteriler</span></a></li>
       <li><a routerLink="/calisanlar"><i class="fa fa-user"></i><span>Çalışanlar</span></a></li>
-      <li ><a routerLink="/giderler/listele"><i class="fa fa-address-book"></i><span>Giderler</span></a></li>
+      <li ><a routerLink="/giderler/listele"><i class="fa fa-address-book"></i><span>Gider Listele</span></a></li>
       <li ><a routerLink="/hesaplar"><i class="fa fa-bank"></i><span>Kasa & Bankalar</span></a></li>
       <li ><a routerLink="/raporlar"><i class="fa fa-pie-chart"></i><span>Raporlar</span></a></li>
       <li ><a routerLink="/subeler"><i class="fa fa-building-o"></i><span>Şubeler</span></a></li>
