--- a/src/app/AracGiderDetay/arac_gider_detay.component.html
+++ b/src/app/AracGiderDetay/arac_gider_detay.component.html
@@ -4,14 +4,14 @@
     <div class="row">
       <!-- Page Header -->
       <div class="page-head-title">
-        <h2>Gider Detay</h2>
+        <h2>Araç Gider Detay</h2>
       </div>
       <!-- Page Header -->
       <!-- Breadcumb -->
       <ol class="breadcrumb breadcumb-title">
         <li><a href="#">Anasayfa</a></li>
+        <li><a href="#">Araçlar</a></li>
         <li><a href="#">Giderler</a></li>
-        <li><a href="#">5</a></li>
         <li class="active">Detay</li>
       </ol>
       <!-- Breadcumb -->
@@ -31,84 +31,51 @@
         <div class="panel-heading">
           <!-- Panel Left Block -->
           <div class="panel-heading-left-block">
-            <span> Gider Detay </span>
+            <span> Araç Gider Detay </span>
           </div>
           <!-- Panel Heading Left Block -->
         </div>
         <!-- Panel Heading -->
         <div class="panel-body">
-
-          <!-- Tutar -->
+          <!-- Adı Soyadı -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
-              <span>Tutar <small>(Vergiler Dahil)</small> </span>
+              <span>Adı Soyadı</span>
             </div>
             <div class="col-md-1">
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>100,00 <i class="fa fa-try"></i></span>
+              <span>Ahmet Elçik</span>
             </div>
           </div>
-          <!-- Tutar -->
-
-          <!-- KDV -->
+          <!-- Adı Soyadı -->
+          <!-- E-Posta Adresi -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
-              <span>KDV</span>
+              <span>E-Posta Adresi</span>
             </div>
             <div class="col-md-1">
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>18,00 <i class="fa fa-try"></i></span>
+              <span>ahmetelcik35@gmail.com</span>
             </div>
           </div>
-          <!-- KDV -->
-
-          <!-- Fiş Fatura Tarihi -->
+          <!-- E-Posta Adresi -->
+          <!-- IBAN Numarası -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
-              <span>Fiş / Fatura Tarihi</span>
+              <span>IBAN Numarası</span>
             </div>
             <div class="col-md-1">
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>30 Mart 2017</span>
+              <span>TR25252525252525253242342</span>
             </div>
           </div>
-          <!-- Fiş Fatura Tarihi -->
-
-          <!-- Gider Şube -->
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Şube</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <a href="#">Denizli Çınar Şube</a>
-            </div>
-          </div>
-          <!-- Gider Şube -->
-
-          <!-- Gider Kategori -->
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Kategori</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <a href="#">Ofis Kırtasiye</a>
-            </div>
-          </div>
-          <!-- Gider Kategori -->
-
-
+          <!-- IBAN Numarası -->
         </div>
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
