--- a/src/app/AracGiderDetay/arac_gider_detay.component.html
+++ b/src/app/AracGiderDetay/arac_gider_detay.component.html
@@ -37,45 +37,92 @@
         </div>
         <!-- Panel Heading -->
         <div class="panel-body">
-          <!-- Adı Soyadı -->
+          
+          <!-- Tutar -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
-              <span>Adı Soyadı</span>
+              <span>Tutar <small>(Vergile Dahil)</small></span>
             </div>
             <div class="col-md-1">
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>Ahmet Elçik</span>
+              <span>125,00 <i class="fa fa-try"></i></span>
             </div>
           </div>
-          <!-- Adı Soyadı -->
-          <!-- E-Posta Adresi -->
+          <!-- Tutar -->
+
+          <!-- KDV -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
-              <span>E-Posta Adresi</span>
+              <span>KDV</span>
             </div>
             <div class="col-md-1">
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>ahmetelcik35@gmail.com</span>
+              <span>12,00 <i class="fa fa-try"></i></span>
             </div>
           </div>
-          <!-- E-Posta Adresi -->
-          <!-- IBAN Numarası -->
+          <!-- KDV -->
+
+          <!-- Fiş Fatura Tarihi -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
-              <span>IBAN Numarası</span>
+              <span>Fiş & Fatura Tarihi</span>
             </div>
             <div class="col-md-1">
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>TR25252525252525253242342</span>
+              <span>12 Aralık 2017</span>
             </div>
           </div>
-          <!-- IBAN Numarası -->
+          <!-- Fiş Fatura Tarihi -->
+
+           <!-- Gider Şube -->
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Şube</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <a href="#" class="link-blue-hover">Denizli Çınar Şube</a>
+            </div>
+          </div>
+          <!-- Gider Şube -->
+
+          <!-- Gider Kategori -->
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Kategori</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <a href="#" class="link-blue-hover">Ofis Kırtasiye</a>
+            </div>
+          </div>
+          <!-- Gider Kategori -->
+
+          <!-- Açıklama -->
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Açıklama</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem recusandae suscipit mollitia dolore ut, modi eaque distinctio sint quia reiciendis, aspernatur dignissimos, nulla consequuntur, praesentium nisi fugiat saepe impedit repudiandae?</p>
+            </div>
+          </div>
+          <!-- Açıklama -->
+
+
         </div>
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
