--- a/src/app/GiderDetay/gider_detay.component.html
+++ b/src/app/GiderDetay/gider_detay.component.html
@@ -89,7 +89,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <a href="#">Denizli Çınar Şube</a>
+              <a href="#" class="link-blue-hover">Denizli Çınar Şube</a>
             </div>
           </div>
           <!-- Gider Şube -->
@@ -103,7 +103,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <a href="#">Ofis Kırtasiye</a>
+              <a href="#" class="link-blue-hover">Ofis Kırtasiye</a>
             </div>
           </div>
           <!-- Gider Kategori -->
