--- a/src/app/GiderDetay/gider_detay.component.html
+++ b/src/app/GiderDetay/gider_detay.component.html
@@ -108,6 +108,20 @@
           </div>
           <!-- Gider Kategori -->
 
+          <!-- Açıklama -->
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Açıklama</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem recusandae suscipit mollitia dolore ut, modi eaque distinctio sint quia reiciendis, aspernatur dignissimos, nulla consequuntur, praesentium nisi fugiat saepe impedit repudiandae?</p>
+            </div>
+          </div>
+          <!-- Açıklama -->
+
 
         </div>
         <div class="panel-footer">
