add araç gider düzenle

--- a/src/app/AracGiderDetay/arac_gider_detay.component.html
+++ b/src/app/AracGiderDetay/arac_gider_detay.component.html
@@ -156,7 +156,7 @@
               <div class="btn-group btn-block" dropdown>
                 <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
                 <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
-                  <li role="menuitem"><a class="dropdown-item" routerLink="../duzenle"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
+                  <li role="menuitem"><a class="dropdown-item" routerLink="/araclar/giderler/5/duzenle"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
                   <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
                 </ul>
               </div>
@@ -206,7 +206,7 @@
           <tabset>
 
             <!-- Ödemeler -->
-            <tab heading="Notlar" customClass="tab-ozel">
+            <tab heading="Ödemeler" customClass="tab-ozel">
               <div class="tab-page-content">
                 <ul class="odeme-listele-tab">
                   <li>
