--- a/src/app/AracDetay/arac-detay.component.html
+++ b/src/app/AracDetay/arac-detay.component.html
@@ -425,7 +425,7 @@
                           <tbody>
                           <tr>
                             <td class="first-table-cell">
-                              <a routerLink="../giderler/245/detay">
+                              <a routerLink="/araclar/giderler/245/detay">
                                 <div class="gider-listele-table-left-block">
                                   <div class="gider-listele-table-left-icon-block">
                                     <i class="fa fa-file" style="padding: 14px;background-color: #ddd;border-radius: 9px;font-size: 20px;color: #adadad;"></i>
@@ -440,7 +440,7 @@
                               </a>
                             </td>
                             <td>
-                              <a routerLink="../giderler/245/detay">
+                              <a routerLink="/araclar/giderler/245/detay">
                                 <div class="gider-listele-table-middle-block">
                                   <div class="gider-listele-table-fatura-tarihi">
                                     <span>12 Ocak 2016</span>
@@ -456,7 +456,7 @@
                               </a>
                             </td>
                             <td style="text-align: right;">
-                              <a routerLink="../giderler/245/detay">
+                              <a routerLink="./araclar/giderler/245/detay">
                                 <div class="gider-listele-table-right-block">
                                   <div class="gider-listele-table-kalan-meblag-block">
                                     <span>Kalan Meblağ : <b>90,00</b> <i class="fa fa-try"></i></span>
