--- a/src/app/AracGiderDetay/arac_gider_detay.component.html
+++ b/src/app/AracGiderDetay/arac_gider_detay.component.html
@@ -210,7 +210,7 @@
               <div class="tab-page-content">
                 <ul class="odeme-listele-tab">
                   <li>
-                    <a routerLink="../odeme/12/detay">
+                    <a routerLink="../../odeme/12/detay">
                       <div class="tab-page-content-icon-block">
                         <i class="fa fa-sign-out fa-rotate-90"></i>
                       </div>
