--- a/src/app/AracGiderDetay/arac_gider_detay.component.html
+++ b/src/app/AracGiderDetay/arac_gider_detay.component.html
@@ -26,6 +26,8 @@
   <div class="row">
     <!-- Çalışan Detay-->
     <div class="col-md-8">
+
+      
       <div class="panel panel-light">
         <!-- Panel Heading -->
         <div class="panel-heading">
@@ -47,7 +49,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>125,00 <i class="fa fa-try"></i></span>
+              <span> {{ fatura_detay.fatura_tutari }} <i class="fa fa-try"></i></span>
             </div>
           </div>
           <!-- Tutar -->
@@ -61,7 +63,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>12,00 <i class="fa fa-try"></i></span>
+              <span>{{ fatura_detay.fatura_kdv_tutari }} <i class="fa fa-try"></i></span>
             </div>
           </div>
           <!-- KDV -->
@@ -75,7 +77,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>12 Aralık 2017</span>
+              <span>{{ fatura_detay.fatura_tarihi }}</span>
             </div>
           </div>
           <!-- Fiş Fatura Tarihi -->
@@ -89,7 +91,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <a href="#" class="link-blue-hover">Denizli Çınar Şube</a>
+              <a href="#" class="link-blue-hover">{{ fatura_detay.gider_sube.sube_adi }}</a>
             </div>
           </div>
           <!-- Gider Şube -->
@@ -103,7 +105,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <a href="#" class="link-blue-hover">Ofis Kırtasiye</a>
+              <a href="#" class="link-blue-hover">{{ fatura_detay.gider_kategori.kategori_adi }}</a>
             </div>
           </div>
           <!-- Gider Kategori -->
@@ -117,7 +119,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem recusandae suscipit mollitia dolore ut, modi eaque distinctio sint quia reiciendis, aspernatur dignissimos, nulla consequuntur, praesentium nisi fugiat saepe impedit repudiandae?</p>
+              <p>{{ fatura_detay.fatura_aciklama }}</p>
             </div>
           </div>
           <!-- Açıklama -->
@@ -128,14 +130,14 @@
           <!-- Panel Footer Left Block -->
           <div class="panel-footer-left-block">
             <div class="panel-footer-ekleyen-kullanici-block">
-              <span>Ekleyen Kullanıcı : <a href="#" class="link-blue-hover">Ahmet Elçik</a></span>
+              <span>Ekleyen Kullanıcı : <a href="#" class="link-blue-hover">{{ fatura_detay.ekleyen_kullanici.adi_soyadi }}</a></span>
             </div>
           </div>
           <!-- Panel Footer Left Block -->
           <!-- Panel Footer Right Block -->
           <div class="panel-footer-right-block">
             <div class="panel-footer-olusturulma-tarihi-block">
-              <span>Oluşturulma Tarihi : 12 Aralık 2016 11:30</span>
+              <span>Oluşturulma Tarihi : {{ fatura_detay.olusturulma_tarihi }}</span>
             </div>
           </div>
           <!-- Panel Footer Right Block -->
@@ -156,7 +158,7 @@
               <div class="btn-group btn-block" dropdown>
                 <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
                 <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
-                  <li role="menuitem"><a class="dropdown-item" routerLink="/araclar/giderler/5/duzenle"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
+                  <li role="menuitem"><a class="dropdown-item" routerLink="../duzenle"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
                   <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
                 </ul>
               </div>
@@ -173,10 +175,10 @@
               <div class="calisan-detay-kalan-bakiye-block">
                 <div class="calisan-detay-kalan-bakiye-text-block">
                   <span class="calisan-detay-kalan-title-text">KALAN</span>
-                  <span class="calisan-detay-kalan-bakiye-text">1.500,00 <i class="fa fa-try"></i></span>
+                  <span class="calisan-detay-kalan-bakiye-text">{{ fatura_detay.fatura_kalan_odeme }} <i class="fa fa-try"></i></span>
                 </div>
                 <div class="progress" style="margin-bottom: 0;margin-top: 2px;">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
                   </div>
                 </div>
               </div>
@@ -189,7 +191,7 @@
           <div class="calisan-right-islem-detay-footer-block">
             <div class="calisan-right-islem-detay-footer-text-block">
               <span class="calisan-right-footer-title-text">TOPLAM</span>
-              <span class="calisan-right-footer-content-text pull-right">2.500,00 <i class="fa fa-try"></i></span>
+              <span class="calisan-right-footer-content-text pull-right">{{ fatura_detay.fatura_tutari }} <i class="fa fa-try"></i></span>
             </div>
           </div>
         </div>
@@ -209,36 +211,14 @@
             <tab heading="Ödemeler" customClass="tab-ozel">
               <div class="tab-page-content">
                 <ul class="odeme-listele-tab">
-                  <li>
-                    <a routerLink="../../odeme/12/detay">
+                  <li *ngFor="let odeme of gider_odemeleri">
+                    <a routerLink="../../odeme/{{ odeme.id }}/detay">
                       <div class="tab-page-content-icon-block">
                         <i class="fa fa-sign-out fa-rotate-90"></i>
                       </div>
                       <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                        <p>{{ odeme.odeme_tutari }} <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
+                        <span>{{ odeme.odeme_tarihi }} / {{ odeme.ekleyen_kullanici.adi_soyadi }}</span>
                       </div>
                     </a>
                   </li>
@@ -251,7 +231,8 @@
               <div class="tab-page-content">
                 <ul class="not-listele-tab">
                   <li class="not-listele-tab-not-ekle-btn"><button class="btn btn-primary-ozel btn-block"><i class="fa fa-plus"></i> Yeni Not</button></li>
-                  <li>
+                  
+                  <li *ngFor="let not of gider_notlari">
                     <a href="#">
                       <!-- İcon -->
                       <div class="tab-page-content-icon-block">
@@ -260,87 +241,13 @@
                       <!-- İcon -->
                       <!-- Text -->
                       <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                        <p>{{ not.gider_notu }}</p>
+                        <span>{{ not.olusturulma_tarihi }} / {{ not.ekleyen_kullanici.adi_soyadi }}</span>
                       </div>
                       <!-- Text -->
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
+                  
                 </ul>
               </div>
             </tab>
