add musteri detay

--- a/src/app/musteriler/musteriler.component.html
+++ b/src/app/musteriler/musteriler.component.html
@@ -48,7 +48,7 @@
                 <tbody>
                 <tr *ngFor="let musteri of musteriler">
                   <td class="first-table-cell">
-                    <a routerLink="/musteri/{{ musteri.id }}/detay">
+                    <a routerLink="/musteriler/{{ musteri.id }}/detay">
                       <div class="musteri-listele-table-left-block">
                         <div class="musteri-listele-table-left-kisa-ad-block">
                           <span>{{ musteri.bas_harfler }}</span>
